--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,5 +33,11 @@ dependencies {
     //底部导航栏样式BottomNavigationBar
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.1'
     //RelativeLayout布局
-    compile 'com.android.support:percent:25.0.0'
+    compile 'com.android.support:percent:26.1.0'
+}
+dependencies {
+    compile 'com.google.code.gson:gson:2.3'
+    compile 'com.squareup.retrofit:retrofit:2.0.0-beta1'
+    compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
 }
