--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
 
         </activity>
         <activity android:name=".activity.LoginActivity">
+            Android:windowSoftInputMode="stateunspeciedadjustPan"
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
