第八天 搞定了引导页，，再写mine那块Ui,绝望啊啊啊

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     compile 'com.ashokvarma.android:bottom-navigation-bar:2.0.1'
     //RelativeLayout布局
     compile 'com.android.support:percent:26.1.0'
+    //圆形头像的
+    compile 'com.makeramen:roundedimageview:2.2.1'
+
 }
 dependencies {
     compile 'com.google.code.gson:gson:2.3'
