--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,3 +50,6 @@ dependencies {
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
