第10天  mine那块主页面写完了,然后是mine的usear的界面

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".activity.GuideActivity" />
-        <activity android:name=".activity.FeedbackActivity"></activity>
+        <activity android:name=".MineFragmentActivitise.FeedbackActivity" />
+        <activity android:name=".MineFragmentActivitise.UserActivity"></activity>
     </application>
 
 </manifest>
