--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
         </activity>
         <activity android:name=".activity.GuideActivity" />
         <activity android:name=".MineFragmentActivitise.FeedbackActivity" />
-        <activity android:name=".MineFragmentActivitise.UserActivity"></activity>
+        <activity android:name=".MineFragmentActivitise.UserActivity" />
+        <activity android:name=".MineFragmentActivitise.MinegameActivity" />
+        <activity android:name=".MineFragmentActivitise.MinescoreActivity"></activity>
     </application>
 
 </manifest>
