添加了添加卡片的界面 但是自定义弹框 动态布局切换没解决

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,5 +74,10 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
 
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
 
-
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
