--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
         <activity android:name=".MineFragmentActivitise.UserActivity" />
         <activity android:name=".MineFragmentActivitise.MinegameActivity" />
         <activity android:name=".MineFragmentActivitise.MinescoreActivity" />
-        <activity android:name=".SearchFragmentActivitise.SearchViewActivity"></activity>
+        <activity android:name=".SearchFragmentActivitise.SearchViewActivity" />
+        <activity android:name=".ReviewFragmentActivitise.AddCard"></activity>
     </application>
 
 </manifest>
