选择卡包这块逻辑完成了 但是还是有问题

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,7 +34,8 @@
         <activity android:name=".MineFragmentActivitise.MinegameActivity" />
         <activity android:name=".MineFragmentActivitise.MinescoreActivity" />
         <activity android:name=".SearchFragmentActivitise.SearchViewActivity" />
-        <activity android:name=".ReviewFragmentActivitise.AddCard"></activity>
+        <activity android:name=".ReviewFragmentActivitise.AddCard" />
+
     </application>
 
 </manifest>
