--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,3 +89,7 @@ dependencies {
 dependencies {
     implementation 'com.android.support.constraint:constraint-layout:+'
 }
+
+dependencies {
+    implementation 'com.android.support.constraint:constraint-layout:+'
+}
