--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ dependencies {
     compile 'com.ryane.banner:banner-lib:0.7'
     //历史搜索框
     compile 'com.carson_ho:SearchLayout:1.0.1'
+    //okhttp的
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 
 
 }
