--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,9 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
 
 
+    compile 'org.litepal.android:core:1.6.1'
+
+
 
 
 
