--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     compile 'com.github.bumptech.glide:glide:3.7.0'
 
+    compile'com.google.code.gson:gson:2.7'
+
 
 
 
